--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
               <div class="card">
                 <div class="card-footer card-big-footer">
                   <h2>Bejelentkezés és kijelentkezés</h2>
-                  <p><b>Bejelentkezés:</b> 13:00-tól éjfélig</p>
-                  <p><b>Kijelentkezés:</b> Reggeltől délig 12 óráig</p>
+                  <p><b>Bejelentkezés:</b> 13:00-tól éjfélig <br/><b>Kijelentkezés:</b> Reggeltől délig 12 óráig</p>
+                  <p></p>
                   <p style="margin: 0px !important;">Amennyiben a kijelentkezés után még maradnál, biztosítunk csomagmegőrzési lehetőséget.</p>
                 </div>
               </div>
