--- a/index.html
+++ b/index.html
@@ -78,66 +78,8 @@
                            <p style="margin: 0px; padding-top: 11px;">
                               Reméljük, hogy jól fogod érezni magad nálunk, és minden információ rendelkezésedre áll a kényelmes időtöltéshez. Ha még bármilyen kérdésed lenne, ne habozz felvenni velünk a kapcsolatot.
                            </p>
-                           <!-- <h2>Fontos tudnivalók</h2>
-                              <h2>WiFi Információk:</h2>
-                              
-                              <h2>Melegvíz Használat</h2>
-                              <p>Csak hogy tudd, a melegvíz napkollektorokból érkezik. Várj kérlek egy rövid ideig.</p>
-                              <h2>Dohányzás:</h2>
-                              <p>Ha dohányoznál, az erkélyen van erre lehetőség. Van egy hamutartó és székek is, amiket használhatsz.</p> -->
                         </div>
                      </div>
-                     <!-- <div class="card">
-                        <div class="card-footer card-big-footer">
-                          <h2>Gyakran feltett kérdések</h2>
-                          <div class="list accordion-list full-width list-dividers list-outline" >
-                            <ul>
-                              <li class="accordion-item">
-                                <a class="item-content item-link" href="#" style="padding: 0px !important;">
-                                  <div class="item-inner">
-                                    <div class="item-title">What is the purpose of the app?</div>
-                                  </div>
-                                </a>
-                                <div class="accordion-item-content" style="padding: 0px !important;">
-                                  <p>The purpose of the app is to provide users with a convenient and efficient way to access various services
-                                    on their mobile devices.
-                                  </p>
-                                </div>
-                              </li>
-                              <li class="accordion-item">
-                                <a class="item-content item-link" href="#" style="padding: 0px !important;">
-                                  <div class="item-inner">
-                                    <div class="item-title">Is the app free to download?</div>
-                                  </div>
-                                </a>
-                                <div class="accordion-item-content" style="padding: 0px !important;">
-                                  <p>Yes, the app is free to download from the app store.</p>
-                                </div>
-                              </li>
-                              <li class="accordion-item">
-                                <a class="item-content item-link" href="#" style="padding: 0px !important;">
-                                  <div class="item-inner">
-                                    <div class="item-title">How often are updates released for the app?</div>
-                                  </div>
-                                </a>
-                                <div class="accordion-item-content" style="padding: 0px !important;">
-                                  <p>Updates for the app are released regularly to improve the user experience and add new features.</p>
-                                </div>
-                              </li>
-                              <li class="accordion-item">
-                                <a class="item-content item-link" href="#" style="padding: 0px !important;">
-                                  <div class="item-inner">
-                                    <div class="item-title">Can I make payments through the app?</div>
-                                  </div>
-                                </a>
-                                <div class="accordion-item-content" style="padding: 0px !important;">
-                                  <p>Yes, the app supports various payment methods for your convenience.</p>
-                                </div>
-                              </li>
-                            </ul>
-                          </div>
-                        </div>
-                        </div> -->
                   </div>
                </div>
             </div>
@@ -167,7 +109,7 @@
                      </div>
                      <h1>Sarki Üzlet</h1>
                      <p>Közvetlen közelünkben található egy kényelmes sarki üzlet, ahol minden, amire szükséged lehet, kézre áll.<br/>  Az élelmiszerektől kezdve a vegyi árukig, itt mindent megtalálsz egy helyen. Praktikus és gyors vásárlási lehetőség mindennapi szükségleteid kielégítéséhez.</p>
-                     <a href="https://www.google.com/maps/place/Sarki+Üzlet+--+Önkiszolgáló/@46.7004304,25.5040335,17z/data=!3m1!4b1!4m6!3m5!1s0x474aedd1cd731fd3:0x12633330c2064bd1!8m2!3d46.7004304!4d25.5066084!16s%2Fg%2F11df82fjnd?entry=ttu" class="link link-banner dark-theme-green link-chevron">
+                     <a href="https://www.google.com/maps/dir/46.7012078,25.507957/Sarki+%C3%9Czlet+--+%C3%96nkiszolg%C3%A1l%C3%B3,+Strada+Ciumani,+Joseni+537130/@46.700903,25.5058714,17.41z/data=!4m9!4m8!1m0!1m5!1m1!1s0x474aedd1cd731fd3:0x12633330c2064bd1!2m2!1d25.5066263!2d46.7004413!3e2?entry=ttu" class="link external link-banner dark-theme-green link-chevron">
                         <i class="icon f7-icons">logo_google</i>
                         <div class="link-banner-text">
                            <div class="link-banner-title">Útvonal tervezés</div>
