--- a/index.html
+++ b/index.html
@@ -141,6 +141,13 @@
                         <p style="padding-left: 20px;">
                            Kérjük, mutasd meg a pincérnek a fizetéskor, hogy érvényesíteni tudjuk a kedvezményt.
                         </p>
+                        <a href="https://www.google.com/maps/dir/P%C3%A1lya+Bisztr%C3%B3,+Strada+Stadionului,+Gheorgheni/Sarki+%C3%9Czlet+--+%C3%96nkiszolg%C3%A1l%C3%B3,+Strada+Ciumani,+Joseni+537130/@46.7141778,25.4761971,12.13z/data=!4m14!4m13!1m5!1m1!1s0x474aed78ae555197:0x75488a777577dda8!2m2!1d25.5933338!2d46.7266957!1m5!1m1!1s0x474aedd1cd731fd3:0x12633330c2064bd1!2m2!1d25.5066263!2d46.7004413!3e2?entry=ttu" class="link external link-banner dark-theme-green link-chevron" style="margin-bottom: 0px !important;">
+                        <i class="icon f7-icons">logo_google</i>
+                        <div class="link-banner-text">
+                           <div class="link-banner-title">Útvonal tervezés</div>
+                           <div class="link-banner-subtitle">Google térképen</div>
+                        </div>
+                     </a>
                      </div>
                      <div class="card">
                         <div class="card-image">
