--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                      </div>
                      <h1>Sarki Üzlet</h1>
                      <p>Közvetlen közelünkben található egy kényelmes sarki üzlet, ahol minden, amire szükséged lehet, kézre áll.<br/>  Az élelmiszerektől kezdve a vegyi árukig, itt mindent megtalálsz egy helyen. Praktikus és gyors vásárlási lehetőség mindennapi szükségleteid kielégítéséhez.</p>
-                     <a href="https://www.google.com/maps/dir/46.7012078,25.507957/Sarki+%C3%9Czlet+--+%C3%96nkiszolg%C3%A1l%C3%B3,+Strada+Ciumani,+Joseni+537130/@46.700903,25.5058714,17.41z/data=!4m9!4m8!1m0!1m5!1m1!1s0x474aedd1cd731fd3:0x12633330c2064bd1!2m2!1d25.5066263!2d46.7004413!3e2?entry=ttu" class="link external link-banner dark-theme-green link-chevron">
+                     <a target="_blank" href="https://www.google.com/maps/dir/46.7012078,25.507957/Sarki+%C3%9Czlet+--+%C3%96nkiszolg%C3%A1l%C3%B3,+Strada+Ciumani,+Joseni+537130/@46.700903,25.5058714,17.41z/data=!4m9!4m8!1m0!1m5!1m1!1s0x474aedd1cd731fd3:0x12633330c2064bd1!2m2!1d25.5066263!2d46.7004413!3e2?entry=ttu" class="link external link-banner dark-theme-green link-chevron">
                         <i class="icon f7-icons">logo_google</i>
                         <div class="link-banner-text">
                            <div class="link-banner-title">Útvonal tervezés</div>
@@ -141,13 +141,13 @@
                         <p style="padding-left: 20px;">
                            Kérjük, mutasd meg a pincérnek a fizetéskor, hogy érvényesíteni tudjuk a kedvezményt.
                         </p>
-                        <a href="https://www.google.com/maps/dir/P%C3%A1lya+Bisztr%C3%B3,+Strada+Stadionului,+Gheorgheni/Sarki+%C3%9Czlet+--+%C3%96nkiszolg%C3%A1l%C3%B3,+Strada+Ciumani,+Joseni+537130/@46.7141778,25.4761971,12.13z/data=!4m14!4m13!1m5!1m1!1s0x474aed78ae555197:0x75488a777577dda8!2m2!1d25.5933338!2d46.7266957!1m5!1m1!1s0x474aedd1cd731fd3:0x12633330c2064bd1!2m2!1d25.5066263!2d46.7004413!3e2?entry=ttu" class="link external link-banner dark-theme-green link-chevron" style="margin-bottom: 0px !important;">
+                        <a target="_blank" href="https://www.google.com/maps/dir/P%C3%A1lya+Bisztr%C3%B3,+Strada+Stadionului,+Gheorgheni/Sarki+%C3%9Czlet+--+%C3%96nkiszolg%C3%A1l%C3%B3,+Strada+Ciumani,+Joseni+537130/@46.7141778,25.4761971,12.13z/data=!4m14!4m13!1m5!1m1!1s0x474aed78ae555197:0x75488a777577dda8!2m2!1d25.5933338!2d46.7266957!1m5!1m1!1s0x474aedd1cd731fd3:0x12633330c2064bd1!2m2!1d25.5066263!2d46.7004413!3e2?entry=ttu" class="link external link-banner dark-theme-green link-chevron" style="margin-bottom: 0px !important;">
                         <i class="icon f7-icons">logo_google</i>
                         <div class="link-banner-text">
                            <div class="link-banner-title">Útvonal tervezés</div>
                            <div class="link-banner-subtitle">Google térképen</div>
                         </div>
-                     </a>
+                        </a>
                      </div>
                      <div class="card">
                         <div class="card-image">
@@ -165,25 +165,7 @@
                            </p>
                         </div>
                      </div>
-                     <!-- <div class="card">
-                        <div class="card-image">
-                          <img
-                            src="img/cards/pisz.jpeg"
-                            alt=""
-                            class="card-big-footer-image"
-                            style="height: 230px !important;"
-                            />
-                        </div>
-                        <div class="card-footer card-big-footer">
-                          <h2>Gyergyói Pisztrángos</h2>
-                          <p style="margin: 0px !important; padding-top: 10px;">
-                            Fő kínálatunk a helyben nevelt pisztráng sütve, 
-                            grillezve illetve füstölve. További ajánlatok között szerepelnek egyéb grill ételek, 
-                            frissensültek, levesek, desszertek.
-                          </p>
-                        </div>
-                        </div> -->
-                     <h2 style="padding-top: 10px;">Környékbeli ajánlott welness</h2>
+                     <!-- <h2 style="padding-top: 10px;">Környékbeli ajánlott welness</h2>
                      <div class="card">
                         <div class="card-image">
                            <img
@@ -196,7 +178,7 @@
                         <div class="card-footer card-big-footer">
                            <h2>Gyergyószentmiklósi uszoda</h2>
                         </div>
-                     </div>
+                     </div> -->
                   </div>
                </div>
             </div>
@@ -213,11 +195,18 @@
                               />
                         </div>
                         <div class="card-footer card-big-footer">
-                           <h2>Gyergyóalfalfi templom</h2>
+                           <h2>Gyergyóalfalvi templom</h2>
                            <a href="/alfalvi-templom/" class="button button-fill button-round color-dark">
                            Tovább olvasom
                            <i class="icon f7-icons">arrow_right</i>
                            </a>
+                           <a target="_blank" href="https://www.google.com/maps/dir/46.7012078,25.507957/46.7006057,25.503091/@46.700568,25.5031636,17.15z/data=!4m2!4m1!3e2?entry=ttu" class="link external link-banner dark-theme-green link-chevron" style="margin-bottom: 0px !important;">
+                        <i class="icon f7-icons">logo_google</i>
+                        <div class="link-banner-text">
+                           <div class="link-banner-title">Útvonal tervezés</div>
+                           <div class="link-banner-subtitle">Google térképen</div>
+                        </div>
+                        </a>
                         </div>
                      </div>
                      <div class="card">
