--- a/index.html
+++ b/index.html
@@ -201,12 +201,12 @@
                            <i class="icon f7-icons">arrow_right</i>
                            </a>
                            <a target="_blank" href="https://www.google.com/maps/dir/46.7012078,25.507957/46.7006057,25.503091/@46.700568,25.5031636,17.15z/data=!4m2!4m1!3e2?entry=ttu" class="link external link-banner dark-theme-green link-chevron" style="margin-bottom: 0px !important;">
-                        <i class="icon f7-icons">logo_google</i>
-                        <div class="link-banner-text">
-                           <div class="link-banner-title">Útvonal tervezés</div>
-                           <div class="link-banner-subtitle">Google térképen</div>
-                        </div>
-                        </a>
+                           <i class="icon f7-icons">logo_google</i>
+                           <div class="link-banner-text">
+                              <div class="link-banner-title">Útvonal tervezés</div>
+                              <div class="link-banner-subtitle">Google térképen</div>
+                           </div>
+                           </a>
                         </div>
                      </div>
                      <div class="card">
@@ -223,6 +223,13 @@
                            <a href="/sugo-barlang/" class="button button-fill button-round color-dark">
                            Tovább olvasom
                            <i class="icon f7-icons">arrow_right</i>
+                           </a>
+                           <a target="_blank" href="https://www.google.com/maps/dir/46.7012078,25.507957/Pe%C5%9Ftera+%C5%9Eug%C4%83u+-+S%C3%BAg%C3%B3-barlang/@46.691327,25.4239669,11z/data=!3m1!4b1!4m9!4m8!1m0!1m5!1m1!1s0x474aea65f991fbbb:0x64ea7416051ea49!2m2!1d25.6735468!2d46.6821118!3e0?entry=ttu" class="link external link-banner dark-theme-green link-chevron" style="margin-bottom: 0px !important;">
+                           <i class="icon f7-icons">logo_google</i>
+                           <div class="link-banner-text">
+                              <div class="link-banner-title">Útvonal tervezés</div>
+                              <div class="link-banner-subtitle">Google térképen</div>
+                           </div>
                            </a>
                         </div>
                      </div>
@@ -241,6 +248,13 @@
                            Tovább olvasom
                            <i class="icon f7-icons">arrow_right</i>
                            </a>
+                           <a target="_blank" href="https://www.google.com/maps/dir/46.7012078,25.507957/L%C3%A1z%C3%A1r+Kast%C3%A9ly,+L%C4%83zarea/@46.725158,25.4982936,14z/data=!3m1!4b1!4m9!4m8!1m0!1m5!1m1!1s0x474aed40161b2619:0xf6f0ed61417b2f77!2m2!1d25.5304983!2d46.7491115!3e0?entry=ttu" class="link external link-banner dark-theme-green link-chevron" style="margin-bottom: 0px !important;">
+                           <i class="icon f7-icons">logo_google</i>
+                           <div class="link-banner-text">
+                              <div class="link-banner-title">Útvonal tervezés</div>
+                              <div class="link-banner-subtitle">Google térképen</div>
+                           </div>
+                           </a>
                         </div>
                      </div>
                      <div class="card">
@@ -257,6 +271,13 @@
                            <a href="/szent-anna-to/" class="button button-fill button-round color-dark">
                            Tovább olvasom
                            <i class="icon f7-icons">arrow_right</i>
+                           </a>
+                           <a target="_blank" href="https://www.google.com/maps/dir/46.7012078,25.507957/Szent+Anna-t%C3%B3/@46.4076318,24.9806177,9z/data=!3m1!4b1!4m9!4m8!1m0!1m5!1m1!1s0x40b4cf226c08fed5:0x506ccb7c82fde2c3!2m2!1d25.8876047!2d46.1265204!3e0?entry=ttu" class="link external link-banner dark-theme-green link-chevron" style="margin-bottom: 0px !important;">
+                           <i class="icon f7-icons">logo_google</i>
+                           <div class="link-banner-text">
+                              <div class="link-banner-title">Útvonal tervezés</div>
+                              <div class="link-banner-subtitle">Google térképen</div>
+                           </div>
                            </a>
                         </div>
                      </div>
@@ -275,6 +296,13 @@
                            Tovább olvasom
                            <i class="icon f7-icons">arrow_right</i>
                            </a>
+                           <a target="_blank" href="https://www.google.com/maps/dir/46.7012078,25.507957/Parajdi+S%C3%B3b%C3%A1nya,+Strada+Minei,+Praid/@46.6267153,24.9844724,10z/data=!3m1!4b1!4m9!4m8!1m0!1m5!1m1!1s0x474afe3481553b9b:0x86ed295f62b79ad6!2m2!1d25.1205556!2d46.5508333!3e0?entry=ttu" class="link external link-banner dark-theme-green link-chevron" style="margin-bottom: 0px !important;">
+                           <i class="icon f7-icons">logo_google</i>
+                           <div class="link-banner-text">
+                              <div class="link-banner-title">Útvonal tervezés</div>
+                              <div class="link-banner-subtitle">Google térképen</div>
+                           </div>
+                           </a>
                         </div>
                      </div>
                      <div class="card">
@@ -291,6 +319,13 @@
                            <a href="/csiksomlyoi-templom/" class="button button-fill button-round color-dark">
                            Tovább olvasom
                            <i class="icon f7-icons">arrow_right</i>
+                           </a>
+                           <a target="_blank" href="https://www.google.com/maps/dir/46.7012078,25.507957/Cs%C3%ADksomly%C3%B3i+kegytemplom,+Strada+Sz%C3%A9k,+Miercurea+Ciuc/@46.5494855,25.3358263,10z/data=!3m1!4b1!4m9!4m8!1m0!1m5!1m1!1s0x474ad5ed7389df25:0xec324774b99eb0be!2m2!1d25.8250097!2d46.3786333!3e0?entry=ttu" class="link external link-banner dark-theme-green link-chevron" style="margin-bottom: 0px !important;">
+                           <i class="icon f7-icons">logo_google</i>
+                           <div class="link-banner-text">
+                              <div class="link-banner-title">Útvonal tervezés</div>
+                              <div class="link-banner-subtitle">Google térképen</div>
+                           </div>
                            </a>
                         </div>
                      </div>
@@ -309,6 +344,13 @@
                            Tovább olvasom
                            <i class="icon f7-icons">arrow_right</i>
                            </a>
+                           <a target="_blank" href="https://www.google.com/maps/dir/46.7012078,25.507957/Gyilkos-t%C3%B3/@46.7454622,25.4823816,11z/data=!3m1!4b1!4m9!4m8!1m0!1m5!1m1!1s0x474a95e2cc334d57:0x57aa7b63bf4008fa!2m2!1d25.7865587!2d46.7899532!3e0?entry=ttu" class="link external link-banner dark-theme-green link-chevron" style="margin-bottom: 0px !important;">
+                           <i class="icon f7-icons">logo_google</i>
+                           <div class="link-banner-text">
+                              <div class="link-banner-title">Útvonal tervezés</div>
+                              <div class="link-banner-subtitle">Google térképen</div>
+                           </div>
+                           </a>
                         </div>
                      </div>
                      <div class="card">
@@ -322,9 +364,40 @@
                         </div>
                         <div class="card-footer card-big-footer">
                            <h2>Medveles</h2>
-                           <a href="http://www.medveles.eu" class="button button-fill button-round color-dark">
-                           Tovább a foglalásra
+                           <a target="_blank" href="http://www.medveles.eu" class="button button-fill button-round color-dark external">
+                           További információ
                            <i class="icon f7-icons">arrow_right</i>
+                           </a>
+                           <a target="_blank" href="https://www.medveles.eu/" class="link external link-banner dark-theme-green link-chevron" style="margin-bottom: 0px !important;">
+                           <i class="icon f7-icons">logo_google</i>
+                           <div class="link-banner-text">
+                              <div class="link-banner-title">Útvonal tervezés</div>
+                              <div class="link-banner-subtitle">Google térképen</div>
+                           </div>
+                           </a>
+                        </div>
+                     </div>
+                     <div class="card">
+                        <div class="card-image">
+                           <img
+                              src="img/cards/babusgato.jpeg"
+                              alt=""
+                              class="card-big-footer-image"
+                              style="height: 230px !important;"
+                              />
+                        </div>
+                        <div class="card-footer card-big-footer">
+                           <h2>Állatsimogató és Állatpark</h2>
+                           <a target="_blank" href="https://www.facebook.com/people/Babusgat%C3%B3-%C3%81llatsimogat%C3%B3-%C3%A9s-%C3%81llatpark-Zetev%C3%A1ralj%C3%A1n/100067485452657/?ref=page_internal" class="button button-fill button-round color-dark external">
+                           További információ
+                           <i class="icon f7-icons">arrow_right</i>
+                           </a>
+                           <a target="_blank" href="https://www.google.com/maps/dir/46.7012078,25.507957/Babusgat%C3%B3+%C3%81llatsimogat%C3%B3+%C3%A9s+%C3%81llatpark,+DJ138,+Sub+Cetate/@46.560855,25.3099898,11z/data=!3m1!4b1!4m9!4m8!1m0!1m5!1m1!1s0x474b1fa38ed80661:0xe561b7ee1fed5480!2m2!1d25.3795171!2d46.4207367!3e0?entry=ttu" class="link external link-banner dark-theme-green link-chevron" style="margin-bottom: 0px !important;">
+                           <i class="icon f7-icons">logo_google</i>
+                           <div class="link-banner-text">
+                              <div class="link-banner-title">Útvonal tervezés</div>
+                              <div class="link-banner-subtitle">Google térképen</div>
+                           </div>
                            </a>
                         </div>
                      </div>
