--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <div class="view view-main tab tab-active view-init" id="tab-1">
                <div class="page">
                   <div class="page-content">
+                     <h1 style="text-align: center;">Üdvözlünk a Fűzfa apartmanban!</h1>
                      <div class="card">
                         <div class="card-image">
                            <img
@@ -33,8 +34,7 @@
                               />
                         </div>
                         <div class="card-footer card-big-footer">
-                           <h2>Üdvözlünk a Fűzfa apartmanban!</h2>
-                           <p style="margin: 0px; padding-top: 15px;">
+                           <p style="margin: 0px;">
                               Nagy öröm számunkra, hogy
                               megérkeztetek. Mindent megteszünk azért, hogy itt
                               tartózkodásotok kellemes és emlékezetes legyen. Bármilyen
@@ -86,8 +86,8 @@
             <div class="view view-init tab" id="tab-2">
                <div class="page" >
                   <div class="page-content">
-                     <h2>Legközelebbi üzlet</h2>
-                     <div class="movie-header">
+                     <h1 style="text-align: center;">Legközelebbi üzlet</h1>
+                     <div style="margin: 0px !important;" class="movie-header">
                         <img src="img/cards/sarki2.png" alt="" class="movie-cover">
                         <div class="movie-infos">
                            <div class="movie-block">
@@ -107,7 +107,6 @@
                            </div>
                         </div>
                      </div>
-                     <h1>Sarki Üzlet</h1>
                      <p>Közvetlen közelünkben található egy kényelmes sarki üzlet, ahol minden, amire szükséged lehet, kézre áll.<br/>  Az élelmiszerektől kezdve a vegyi árukig, itt mindent megtalálsz egy helyen. Praktikus és gyors vásárlási lehetőség mindennapi szükségleteid kielégítéséhez.</p>
                      <a target="_blank" href="https://www.google.com/maps/dir/46.7012078,25.507957/Sarki+%C3%9Czlet+--+%C3%96nkiszolg%C3%A1l%C3%B3,+Strada+Ciumani,+Joseni+537130/@46.700903,25.5058714,17.41z/data=!4m9!4m8!1m0!1m5!1m1!1s0x474aedd1cd731fd3:0x12633330c2064bd1!2m2!1d25.5066263!2d46.7004413!3e2?entry=ttu" class="link external link-banner dark-theme-green link-chevron">
                         <i class="icon f7-icons">logo_google</i>
@@ -116,7 +115,7 @@
                            <div class="link-banner-subtitle">Google térképen</div>
                         </div>
                      </a>
-                     <h2 style="padding-top: 15px;">Környékbeli ajánlott éttermek</h2>
+                     <h1 style="padding-top: 15px; text-align: center;">Környékbeli ajánlott éttermek</h1>
                      <div class="card">
                         <div class="card-image">
                            <img
@@ -185,7 +184,7 @@
             <div class="view view-init tab" id="tab-3">
                <div class="page" >
                   <div class="page-content">
-                     <h1>Családi programajánló</h1>
+                     <h1 style="text-align: center;">Családi programajánló</h1>
                      <div class="card">
                         <div class="card-image">
                            <img
@@ -234,7 +233,7 @@
                            </a>
                         </div>
                      </div>
-                     <h1>Kulturális látnivalók</h1>           
+                     <h1 style="text-align: center;">Kulturális látnivalók</h1>           
                      <div class="card">
                         <div class="card-image">
                            <img
@@ -307,7 +306,7 @@
                            </a>
                         </div>
                      </div>
-                     <h1>Természeti csodák</h1>
+                     <h1 style="text-align: center;">Természeti csodák</h1>
                      <div class="card">
                         <div class="card-image">
                            <img
