--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
                         </div>
                      </a>
                      <h1 style="padding-top: 15px; text-align: center;">Környékbeli ajánlott éttermek</h1>
+                     
                      <div class="card">
                         <div class="card-image">
                            <img
@@ -160,10 +161,18 @@
                         <div class="card-footer card-big-footer">
                            <h2>Basa Fogadó</h2>
                            <p style="margin: 0px !important; padding-top: 10px;">
-                              A Basa Fogadó elkötelezetten őrzi a székely hagyományokat.
+                             A Basa Fogadó elkötelezetten őrzi a székely hagyományokat.
                            </p>
                         </div>
+                        <a target="_blank" href="https://www.google.com/maps/dir/46.7012078,25.507957/P%C3%A1lya+Bisztr%C3%B3,+Strada+Stadionului,+Gheorgheni/@46.7231229,25.5100493,13z/data=!3m1!4b1!4m9!4m8!1m0!1m5!1m1!1s0x474aed78ae555197:0x75488a777577dda8!2m2!1d25.5933338!2d46.7266957!3e0?entry=ttu" class="link external link-banner dark-theme-green link-chevron" style="margin-bottom: 0px !important;">
+                        <i class="icon f7-icons">logo_google</i>
+                        <div class="link-banner-text">
+                           <div class="link-banner-title">Útvonal tervezés</div>
+                           <div class="link-banner-subtitle">Google térképen</div>
+                        </div>
+                        </a>
                      </div>
+                
                      <!-- <h2 style="padding-top: 10px;">Környékbeli ajánlott welness</h2>
                      <div class="card">
                         <div class="card-image">
@@ -195,7 +204,7 @@
                               />
                         </div>
                         <div class="card-footer card-big-footer">
-                           <h2>Medveles</h2>
+                           <h2 style="text-align: center;">Medveles</h2>
                            <a target="_blank" href="http://www.medveles.eu" class="button button-fill button-round color-dark external">
                            További információ
                            <i class="icon f7-icons">arrow_right</i>
@@ -219,7 +228,7 @@
                               />
                         </div>
                         <div class="card-footer card-big-footer">
-                           <h2>Állatsimogató és Állatpark</h2>
+                           <h2 style="text-align: center;">Állatsimogató és Állatpark</h2>
                            <a target="_blank" href="https://www.facebook.com/people/Babusgat%C3%B3-%C3%81llatsimogat%C3%B3-%C3%A9s-%C3%81llatpark-Zetev%C3%A1ralj%C3%A1n/100067485452657/?ref=page_internal" class="button button-fill button-round color-dark external">
                            További információ
                            <i class="icon f7-icons">arrow_right</i>
@@ -244,7 +253,7 @@
                               />
                         </div>
                         <div class="card-footer card-big-footer">
-                           <h2>Gyergyóalfalvi templom</h2>
+                           <h2 style="text-align: center;">Gyergyóalfalvi templom</h2>
                            <a href="/alfalvi-templom/" class="button button-fill button-round color-dark">
                            Tovább olvasom
                            <i class="icon f7-icons">arrow_right</i>
@@ -268,7 +277,7 @@
                               />
                         </div>
                         <div class="card-footer card-big-footer">
-                           <h2>Lázár kastély</h2>
+                           <h2 style="text-align: center;">Lázár kastély</h2>
                            <a href="/lazar-kastely/" class="button button-fill button-round color-dark">
                            Tovább olvasom
                            <i class="icon f7-icons">arrow_right</i>
@@ -292,7 +301,7 @@
                               />
                         </div>
                         <div class="card-footer card-big-footer">
-                           <h2>Csíksomlyói Kegytemplom</h2>
+                           <h2 style="text-align: center;">Csíksomlyói Kegytemplom</h2>
                            <a href="/csiksomlyoi-templom/" class="button button-fill button-round color-dark">
                            Tovább olvasom
                            <i class="icon f7-icons">arrow_right</i>
@@ -317,7 +326,7 @@
                               />
                         </div>
                         <div class="card-footer card-big-footer">
-                           <h2>Gyilkos-tó</h2>
+                           <h2 style="text-align: center;">Gyilkos-tó</h2>
                            <a href="/gyilkos-to/" class="button button-fill button-round color-dark">
                            Tovább olvasom
                            <i class="icon f7-icons">arrow_right</i>
@@ -341,7 +350,7 @@
                               />
                         </div>
                         <div class="card-footer card-big-footer">
-                           <h2>Szent Anna Tó</h2>
+                           <h2 style="text-align: center;">Szent Anna Tó</h2>
                            <a href="/szent-anna-to/" class="button button-fill button-round color-dark">
                            Tovább olvasom
                            <i class="icon f7-icons">arrow_right</i>
@@ -365,7 +374,7 @@
                               />
                         </div>
                         <div class="card-footer card-big-footer">
-                           <h2>Súgó-barlang</h2>
+                           <h2 style="text-align: center;">Súgó-barlang</h2>
                            <a href="/sugo-barlang/" class="button button-fill button-round color-dark">
                            Tovább olvasom
                            <i class="icon f7-icons">arrow_right</i>
@@ -389,7 +398,7 @@
                               />
                         </div>
                         <div class="card-footer card-big-footer">
-                           <h2>Medve-tó és Parajdi sóbánya</h2>
+                           <h2 style="text-align: center;">Medve-tó és Parajdi sóbánya</h2>
                            <a href="/medve-to/" class="button button-fill button-round color-dark">
                            Tovább olvasom
                            <i class="icon f7-icons">arrow_right</i>
