--- a/index.html
+++ b/index.html
@@ -418,13 +418,25 @@
             <div class="view view-init tab" id="tab-4">
                <div class="page">
                   <div class="page-content">
-    <h1>Ajandek</h1>
+    <h1 style="text-align: center;">Ajándék</h1>
     <div class="information-block">
       <img src="img/cards/offer.png" alt="">
       <h2>Kedvezmény!</h2>
       <p style="text-align: center;">Fedezd fel az új lehetőséget, hogy te lehess az, aki kedves ismerőseit a legjobb élményekhez vezeti! <br/>Ha Te ajánlod barátaidnak, hogy apartmanunkba látogassanak el, és ők az ajánlásodra érkeznek, akkor neked a következő foglaláskor 10%-os kedvezmény jár. :)</p>
     </div>
-   
+    <hr/>
+    <div class="card">
+      <div class="card-image">
+        <img src="img/cards/coffegft.png" alt="" class="card-big-footer-image" />
+      </div>
+      <div class="card-footer card-big-footer">
+        <h2 style="text-align: center;">Frissítő ajándékok</h2>
+        <p style="text-align: center;">
+          Ahogy megérkeztek hozzánk, azonnal érezni fogjátok, hogy gondoskodunk kényelmetekről. Ajándékba kapjátok tőlünk egy frissítő palack vizet, hogy mindig hidratáltak maradhassatok az utazás során. Ezen felül mindenkit megvendégelünk egy kávé kapszulával is, hiszen tudjuk, hogy az utazás fárasztó, és egy jó kávé mindig jól jön a felébredéshez és a feltöltődéshez. Üdvözöljük titeket a kényelem és a figyelmesség világában!
+        </p>
+        
+      </div>
+    </div>
   </div>
                </div>
             </div>
