--- a/pages/pages/gyilkos_to.html
+++ b/pages/pages/gyilkos_to.html
@@ -38,6 +38,7 @@
         mellett épült ki. A Békás-szoros a Kárpátok egyik legdrámaibb
         hasadékvölgye, ezért érdemes túrát tervezni, ha erre járunk.
       </p>
+      <img src="img/cards/szoros.jpg" alt="" style="height: 240px" />
       <p>
         Az üdülőtelepen számos tevékenységben vehetnek részt a látogatók, mint
         például csónakázás, kalandpark stb., valamint több szállás és étkezési
