--- a/index.html
+++ b/index.html
@@ -60,15 +60,17 @@
                               <br/>
                            <p class="welcome_text2" style="margin: 0px; padding-top: 3px;">
                               Legjobbakat kívánunk,</br>
-                              <b>Tünde és Jócó!</b>
+                              <p style="margin: 0px;" class="welcome_text3">Tünde és Jócó!</p>
                            </p>
                         </div>
                      </div>
                      <div class="card">
                         <div class="card-footer card-big-footer">
-                           <h2>Bejelentkezés és kijelentkezés</h2>
-                           <p style="margin: 0px; padding-top: 15px;"><b>Bejelentkezés:</b> 13:00-tól éjfélig <br/><b>Kijelentkezés:</b> Reggeltől délig 12 óráig</p>
-                           <p style="margin: 0px; padding-top: 11px;">Amennyiben a kijelentkezés után még maradnál, biztosítunk csomagmegőrzési lehetőséget.</p>
+                           <h2 class="checkInOut">Bejelentkezés és kijelentkezés</h2>
+                           <p class="checkIn" style="margin: 0px; padding-top: 15px;">Bejelentkezés: 13:00-tól éjfélig</p>
+                           <p class="checkOut" style="margin: 0px !important; padding-top: 3px;">Kijelentkezés: 6:00 és 12:00 óra között</p>
+
+                           <p class="checkOut2" style="margin: 0px; padding-top: 11px;">Amennyiben a kijelentkezés után még maradnál, biztosítunk csomagmegőrzési lehetőséget.</p>
                         </div>
                      </div>
                      <div class="card">
