--- a/index.html
+++ b/index.html
@@ -909,7 +909,7 @@
     </div>
     <script src="js/framework7-bundle.js"></script>
     <script src="js/app.js"></script>
-    <!-- <script src="js/multilang1.js"></script> -->
+    <script src="js/multilang.js"></script>
     <!-- <script src="js/multilang2.js"></script> -->
   </body>
 </html>
