--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
                   </div>
                 </a>
               </div>
-              <div class="card">
+              <!-- <div class="card">
                 <div class="card-image">
                   <img
                     src="img/cards/basa.jpeg"
@@ -364,7 +364,7 @@
                     </div>
                   </div>
                 </a>
-              </div>
+              </div> -->
               <h1 style="padding-top: 10px; text-align: center">Welness</h1>
               <div class="card">
                 <div class="card-image">
